refactored the creatingpost dtos
